# DojoGame

./: .gitignore  LICENSE  README-old.md  README.md  collisions.py  newfeaturestest.py  pong.py  pygamemig test.py  pygamemig.py  pyproject.toml  pyproject.toml.old  requirements.txt  rotationtest.py  setup.py
dojogame/: __init__.py  dojogame.py  dojomathfunctions.py  vectors.py
dojogame/application/: __init__.py  application.py
dojogame/audio/: __init__.py  audio.py
dojogame/data/: __init__.py  arrays.py
dojogame/dojoconstants/: __init__.py
dojogame/dojodata/: __init__.py  arrays.py  enums.py  ids.py
dojogame/dojographics/: __init__.py  colors.py  debug.py  drawable.py  gameobjects.py  lines.py  window.py
dojogame/dojoinputs/: __init__.py  inputs.py  ui.py
dojogame/dojomaths/: __init__.py  dojomathfunctions.py  matrix.py  quaternions.py  realtime.py  transform.py  vectors.py
dojogame/dojophysics/: __init__.py  collisions.py  raycasts.py  rigidbody.py
dojogame/graphics/: __init__.py  colors.py  drawable.py  gameobjects.py  lines.py  surfarrays.py  window.py
dojogame/inputs/: __init__.py  inputs.py  ui.py
dojogame/maths/: __init__.py  dojomathfunctions.py  matrix.py  realtime.py  transform.py  vectors.py
dojogame/maths/numba/: __init__.py  matrix.py  vectors.py
dojogame/physics/: __init__.py  collisions.py  raycasts.py  rigidbody.py
dojopy/: __init__.py  dojopy.py
examples/: fractals.py  pong-old.py  tetris.py
my-tests/: buttons.py  collisions.py  collisionstest.py  matrixtests.py  newfeaturestest.py  pygame pong.py
my-tests/data/: collisionstest.py
tests/: matrixtests.py
tests/maths/: matrixtests.py  vectors.py
tests/physics/: collisions.py  inertia.py
