[project]
name = "dojogame"
version = "0.4.0"
description = "Python Wrapper for Pygame"
authors = [
    {name = "migouche",email = "migouche.g.r@gmail.com"}
]
license = {text = "GNU General Public License (GPL)"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numba (>=0.61.0,<0.62.0)",
    "numpy (>=2.2.4,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
